--- a/app/src/main/res/layout/content_flashcard.xml
+++ b/app/src/main/res/layout/content_flashcard.xml
@@ -53,12 +53,31 @@
             android:onClick="onButton4Clicked"
             android:text="Photo" />
 
-        <TextView
-            android:id="@+id/txtStatus"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtWrongAnswers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/txtCorrectAnswers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/txtStatus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="" />
+        </LinearLayout>
 
     </LinearLayout>
 
